--- a/with-sip/with-web-proxy/docker-compose.yml
+++ b/with-sip/with-web-proxy/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       DOMAINS: "$HTTPS_DOMAIN[issue_mode=$HTTPS_MODE,proxy_to=http://app:8000]"
     volumes:
-      - app-ssl-certs:/var/lib/https-portal
+      - app-ssl-certs:/certs
     logging:
       driver: json-file
       options:
