--- a/without-sip/with-web-proxy/docker-compose.yml
+++ b/without-sip/with-web-proxy/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "80:80"
       - "443:443"
     restart: always
+    depends_on:
+      - app
     environment:
       DOMAINS: "$HTTPS_DOMAIN[issue_mode=$HTTPS_MODE,proxy_to=http://app:8000]"
     volumes:
